# Angler_AI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  REQUIREMENTS.md  SUCCESS_CRITERIA.md  VISION.md  forecast_analysis.md
src/angler_ai/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/angler_ai/calibration/: __init__.py  hyperstability.py  intervals.py  types.py
src/angler_ai/ethics/: __init__.py  policy.py  sensitive_species.py  tribal_mask.py
src/angler_ai/ethics/data/: sensitive_species_seed.csv
src/angler_ai/features/: __init__.py  schema.sql  store.py
src/angler_ai/hardware/: __init__.py  backend.py  models.py  probe.py
src/angler_ai/inference/: __init__.py  runtime.py  server.py
src/angler_ai/ingest/: __init__.py  _arcgis.py  _bulk.py  base.py  cpw_stocking.py  dispatch.py  ecosheds.py  epa_attains.py  epa_wqp.py  id_fg.py  nhdplus_hr.py  nhdplus_v2_xwalk.py  noaa_forecast.py  norwest.py  nwis_discharge.py  nwis_water_temp.py  open_meteo.py  pa_pfbc.py  usgs_brt.py  usgs_nas.py  usgs_nwis.py  va_deq.py
src/angler_ai/prediction/: __init__.py  brt_priors.py  flow_anomaly.py  forecast_scoring.py  hydrogem.py  hydrogem_arch.py  map_export.py  map_render.py  pg_gnn.py  seasonal_activity.py  species_priors.py  ssn2.py  stan_hurdle.py  temperature.py  thermal_niches.py  water_temp_model.py
src/angler_ai/reasoning/: __init__.py  agents.py  forecast_narrative.py  tools.py
src/angler_ai/registry/: __init__.py  catalog.yaml  downloader.py  models.py  router.py
src/angler_ai/ui/: __init__.py  http_api.py
tests/: conftest.py  test_calibration.py  test_downloader.py  test_ethics_policy.py  test_feature_store.py  test_forecast_scoring.py  test_hardware_probe.py  test_hydrogem.py  test_ingest_dispatch.py  test_ingest_modules.py  test_map_export.py  test_map_export_temperature.py  test_reasoning_agents.py  test_registry.py  test_temperature_resolver.py
