[project]
name = "angler-ai"
version = "0.0.1"
description = "Local-first, hardware-adaptive tool for researching, analyzing, and mapping fishing in US rivers and streams"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Ron Dilley", email = "ron.dilley@gmail.com" },
]
keywords = ["fishing", "angler", "rivers", "streams", "ml", "llama-cpp", "hydrography"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # Hardware probe
    "archspec>=0.2.5",
    "psutil>=5.9",
    # NVIDIA detection - pinned per pass 6 finding (backward-compat breaks)
    "nvidia-ml-py==12.535.133 ; sys_platform != 'darwin'",
    # llama.cpp runtime - install with appropriate backend via extra-index-url
    "llama-cpp-python>=0.3.0",
    # Data
    "duckdb>=1.0",
    "pyarrow>=15",
    "shapely>=2.0",
    # HTTP & ingestion
    "httpx>=0.27",
    "requests>=2.32",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # HF model download
    "huggingface-hub>=0.24",
    # HTTP API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Config
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Accelerated HF download
hf-transfer = ["hf-transfer>=0.1.8"]
# Prediction layer extras (Python side; R-side SSN2 lives in an R venv)
prediction = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "cmdstanpy>=1.2",
]
# Map rendering: topo basemap overlay for the suitability PNGs (M7+).
# contextily fetches tiles from USGS National Map / OpenTopoMap and caches
# them locally; first render hits the network, subsequent renders are offline.
# Both libs are BSD/MIT licensed; matplotlib + matplotlib-scalebar fit the
# GPL-3 codebase.
maps = [
    "contextily>=1.6",
    "pyproj>=3.6",
    "matplotlib-scalebar>=0.8",
]
# Dev tooling
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
    "types-requests",
]

[project.scripts]
angler-ai = "angler_ai.cli:app"

[project.urls]
Homepage = "https://github.com/rondilley/Angler_AI"
Issues = "https://github.com/rondilley/Angler_AI/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/angler_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/angler_ai",
    "tests",
    "docs",
    "research",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CLAUDE.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "network: tests that require network access",
    "gpu: tests that require a GPU",
    "reference_platform: tests gated on the three reference platforms",
]
